# AMBiT

./: INSTALL.md  README.md  TODO-parapara  make.machine
.github/workflows/: build-and-test-ubuntu.yml
Atom/: ambit.cpp
Configuration/: HamiltonianMatrix.cpp  HamiltonianMatrix.h
HartreeFock/: HartreeY.cpp  HartreeY.h  OrbitalMap.h
MBPT/: CoreValenceIntegrals.cpp  OneElectronIntegrals.h  SlaterIntegrals.cpp  SlaterIntegrals.h
src/: CMakeLists.txt  Include.h  ambit.cpp  ambit.h
src/Atom/: Atom.cpp  Atom.h  Atom_Open.cpp
src/Basis/: BSplineBasis.h  BasisConfig.h  BasisGenerator.cpp  BasisGenerator.h
src/Configuration/: CMakeLists.txt  ConfigGenerator.cpp  HamiltonianMatrix.cpp  HamiltonianMatrix.h  Projection.cpp  Projection.h  RelativisticConfigList.cpp  RelativisticConfigList.h  RelativisticConfiguration.h
src/ExternalField/: RPASolver.h  Transitions.cpp
src/HartreeFock/: HFConfig.h
src/MBPT/: SlaterIntegrals.cpp
src/Specification/: CMakeLists.txt  NOTES  Specification.cpp  Specification.h
src/Specification/parapara/: parapara.h
src/Universal/: CMakeLists.txt  ExpLattice.h  Lattice.h  LatticeConfig.h  Timer.cpp  Timer.h
test/: BSplineBasis.test.cpp  CMakeLists.txt  CoreValenceIntegrals.test.cpp  EJOperator.test.cpp  HamiltonianMatrix.test.cpp  ambit.test.cpp
utilities/EasyBuild/: ambit-3.2.0-foss.eb
